[package]
name = "viewd"
version = "0.0.1"
edition = "2021"

[dependencies]
raw_tty = "0.1.0"
terminal-keycode = "1.1.1"
rayon = "1.7.0"
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
bytes = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
console = "0.15.7"

[dependencies.serde]
version = "1.0.182"
features = ["derive"]

[dependencies.s2n-quic]
version = "1"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]

[profile.release]
debug = false
strip = "symbols"
